--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,8 +1,9 @@
-name: Build
+name: Sonarqube
 on:
-  push:
-    branches:
-      - master # or the name of your main branch
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - master # or the name of your main branch
 jobs:
   build:
     name: Build
