--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
       - name: OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.4.0
+        with:
+          target: 'https://sistemlapor.com/'
